# advection-equation

./: CMakeLists.txt
res/: plot.py
src/: advection.cpp  advection_parallel.cpp
